Adding getpass() function to get credentials

--- a/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
+++ b/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
@@ -58,15 +58,12 @@
     "import google.generativeai as genai\n",
     "import google.ai.generativelanguage as glm\n",
     "from elasticsearch import Elasticsearch, helpers\n",
-    "from dotenv import load_dotenv\n",
-    "import os, json\n",
+    "from getpass import getpass\n",
     "\n",
-    "load_dotenv()\n",
-    "\n",
-    "google_api_key=os.getenv('GOOGLE_API_KEY')\n",
-    "elastic_cloud_id=os.getenv('ES_CLOUD_ID')\n",
-    "elastic_user=os.getenv('ES_USER')\n",
-    "elastic_password=os.getenv('ES_PASSWORD')\n",
+    "google_api_key=getpass(\"Google API Key :\")\n",
+    "elastic_cloud_id=getpass(\"Elastic Cloud ID :\")\n",
+    "elastic_user=getpass(\"Elastic User\")\n",
+    "elastic_password=getpass(\"Elastic Password\")\n",
     "elastic_index_name='gemini-demo'"
    ]
   },
