Added api_key authentication for Elasticsearch connection

--- a/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
+++ b/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
@@ -61,9 +61,8 @@
     "from getpass import getpass\n",
     "\n",
     "google_api_key=getpass(\"Google API Key :\")\n",
+    "elastic_api_key=getpass(\"Elastic API Key :\")\n",
     "elastic_cloud_id=getpass(\"Elastic Cloud ID :\")\n",
-    "elastic_user=getpass(\"Elastic User\")\n",
-    "elastic_password=getpass(\"Elastic Password\")\n",
     "elastic_index_name='gemini-demo'"
    ]
   },
@@ -112,7 +111,7 @@
    "source": [
     "es = Elasticsearch(\n",
     "  cloud_id = elastic_cloud_id,\n",
-    "  basic_auth= (elastic_user, elastic_password)\n",
+    "  api_key= elastic_api_key\n",
     ")"
    ]
   },
