Added api_key authentication for Elasticsearch connection

--- a/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
+++ b/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## setup\n",
     "\n",
-    "* Elastic Credentials - Create [Cloud deployment](https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud) to get all Elastic credentials (`elastic_user`, `elastic_password`, `cloud_id`).\n",
+    "* Elastic Credentials - Create [Cloud deployment](https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud) to get all Elastic credentials (`ELASTIC_CLOUD_ID`, `ELASTIC_API_KEY`).\n",
     "\n",
     "* `GOOGLE_API_KEY` - To use the Gemini API, you need an API key. [Follow](https://ai.google.dev/tutorials/setup) to create a key with one click in Google AI Studio."
    ]
@@ -60,9 +60,9 @@
     "from elasticsearch import Elasticsearch, helpers\n",
     "from getpass import getpass\n",
     "\n",
-    "google_api_key=getpass(\"Google API Key :\")\n",
-    "elastic_api_key=getpass(\"Elastic API Key :\")\n",
-    "elastic_cloud_id=getpass(\"Elastic Cloud ID :\")\n",
+    "GOOGLE_API_KEY=getpass(\"Google API Key :\")\n",
+    "ELASTIC_API_KEY=getpass(\"Elastic API Key :\")\n",
+    "ELASTIC_CLOUD_ID=getpass(\"Elastic Cloud ID :\")\n",
     "elastic_index_name='gemini-demo'"
    ]
   },
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genai.configure(api_key=google_api_key)\n",
+    "genai.configure(api_key=GOOGLE_API_KEY)\n",
     "\n",
     "title = \"Climate in India\"\n",
     "sample_text = (\"India generally experiences a hot summer from March to June, with temperatures often exceeding 40°C in central and northern regions. Monsoon season, from June to September, brings heavy rainfall, especially in the western coast and northeastern areas. Post-monsoon months, October and November, mark a transition with decreasing rainfall. Winter, from December to February, varies in temperature across the country, with colder conditions in the north and milder weather in the south. India's diverse climate is influenced by its geographical features, resulting in regional \")\n",
@@ -110,8 +110,8 @@
    "outputs": [],
    "source": [
     "es = Elasticsearch(\n",
-    "  cloud_id = elastic_cloud_id,\n",
-    "  api_key= elastic_api_key\n",
+    "  cloud_id = ELASTIC_CLOUD_ID,\n",
+    "  api_key= ELASTIC_API_KEY\n",
     ")"
    ]
   },
