--- a/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
+++ b/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
@@ -91,7 +91,7 @@
         "# Set the model name from Hugging Face and task type\n",
         "# open ai detector model - developed by open ai https://github.com/openai/gpt-2-output-dataset/tree/master/detector\n",
         "hf_model_id='roberta-base-openai-detector'\n",
-        "tm = TransformerModel(hf_model_id, \"text_classification\")\n",
+        "tm = TransformerModel(model_id=hf_model_id, task_type="text_classification")\n",
         "\n",
         "#set the modelID as it is named in Elasticsearch\n",
         "es_model_id = tm.elasticsearch_model_id()\n",
@@ -121,7 +121,7 @@
         "# Set the model name from Hugging Face and task type\n",
         "# sentence-transformers model\n",
         "hf_model_id='sentence-transformers/all-mpnet-base-v2'\n",
-        "tm = TransformerModel(hf_model_id, \"text_embedding\")\n",
+        "tm = TransformerModel(model_id=hf_model_id, task_type="text_embedding")\n",
         "\n",
         "#set the modelID as it is named in Elasticsearch\n",
         "es_model_id = tm.elasticsearch_model_id()\n",
