Adds output to search.

--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c99b06d",
+   "id": "f9101eb9",
    "metadata": {},
    "source": [
     "# 🧰 Requirements\n",
     "\n",
     "For this example, you will need:\n",
     "\n",
-    "- An Elastic deployment with minimum **4GB machine learning node**\n",
+    "- An Elastic deployment:\n",
     "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "   \n",
     "- A paid [OpenAI account](https://openai.com/) is required to use the Inference API with \n",
@@ -31,17 +31,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15193c10",
+   "id": "4cd69cc0",
    "metadata": {},
    "source": [
     "# Create Elastic Cloud deployment\n",
     "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
-    "\n",
-    "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-    "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
-    "   - You'll need at least **4GB** RAM per zone for this tutorial\n",
-    "   - Select **Create deployment**"
+    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial."
    ]
   },
   {
@@ -79,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "690ff9af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch, helpers\n",
+    "from elasticsearch import Elasticsearch, helpers, exceptions\n",
     "from urllib.request import urlopen\n",
     "import getpass\n",
     "import json\n",
@@ -134,27 +129,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cc0de5ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'instance-0000000000', 'cluster_name': '0a47378bc5e04c1995cd4c4c92131cd0', 'cluster_uuid': 'DgpshH2GTGefHGUStkD85w', 'version': {'number': '8.12.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '5077850702d0aa4fc42d3eb53bd39b282ae8ad3a', 'build_date': '2023-12-28T10:04:50.840819947Z', 'build_snapshot': False, 'lucene_version': '9.9.1', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(client.info())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e9e7354",
+   "id": "659c5890",
    "metadata": {},
    "source": [
     "Refer to [the documentation](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect to a self-managed deployment.\n",
     "\n",
-    "Read [this page](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect using API keys.\n"
+    "Read [this page](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect using API keys."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96788aa1",
+   "id": "840d92f0",
    "metadata": {},
    "source": [
     "## Create the inference task\n",
@@ -167,15 +170,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e6d98af",
+   "id": "0d007737",
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = getpass.getpass('Enter OpenAI API key:  ')\n",
+    "API_KEY = getpass.getpass('OpenAI API key:  ')\n",
     "\n",
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
-    "    model_id=\"openai_embeddings\",\n",
+    "    model_id=\"my_openai_embedding_model\",\n",
     "    body={\n",
     "        \"service\": \"openai\",\n",
     "        \"service_settings\": {\n",
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5feaf12",
+   "id": "1024d070",
    "metadata": {},
    "source": [
     "## Create an ingest pipeline with an inference processor\n",
@@ -201,21 +204,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5897fe4",
+   "id": "6ace9e2e",
    "metadata": {},
    "outputs": [],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"openai_embeddings\", \n",
+    "    id=\"openai_embeddings_pipeline\", \n",
     "    description=\"Ingest pipeline for OpenAI inference.\",\n",
     "    processors=[\n",
     "    {\n",
     "      \"inference\": {\n",
-    "        \"model_id\": \"openai_embeddings\",\n",
+    "        \"model_id\": \"my_openai_embedding_model\",\n",
     "        \"input_output\": {\n",
     "              \"input_field\": \"plot\",\n",
     "              \"output_field\": \"plot_embedding\"\n",
-    "        }\n",
+    "            }\n",
     "      }\n",
     "    }\n",
     "  ]\n",
@@ -224,13 +227,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b6dd89c",
+   "id": "76d07567",
    "metadata": {},
    "source": [
     "Let's note a few important parameters from that API call:\n",
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
-    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `openai_embeddings`.\n",
+    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `my_openai_embedding_model`. Use the model ID you defined when created the inference task.\n",
     "- `input_output`: Specifies input and output fields.\n",
     "- `input_field`: Field name from which the `dense_vector` representation is created.\n",
     "- `output_field`:  Field name which contains inference results. "
@@ -238,12 +241,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f167c8cf",
+   "id": "28e12d7a",
    "metadata": {},
    "source": [
     "## Create index\n",
     "\n",
-    "The mapping of the destination index – the index that contains the embeddings that the model will create based on your input text – must be created. The destination index must have a field with the [dense_vector](https://www.elastic.co/guide/en/elasticsearch/reference/current/dense-vector.html) field type to index the output of the OpenAI model.\n",
+    "The mapping of the destination index - the index that contains the embeddings that the model will create based on your input text - must be created. The destination index must have a field with the [dense_vector](https://www.elastic.co/guide/en/elasticsearch/reference/current/dense-vector.html) field type to index the output of the OpenAI model.\n",
     "\n",
     "Let's create an index named `openai-movie-embeddings` with the mappings we need."
    ]
@@ -251,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37558907",
+   "id": "6ddcbca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,27 +263,27 @@
     "  index=\"openai-movie-embeddings\",\n",
     "  settings={\n",
     "      \"index\": {\n",
-    "          \"default_pipeline\": \"openai_embeddings\"\n",
+    "          \"default_pipeline\": \"openai_embeddings_pipeline\"\n",
     "      }\n",
     "  },\n",
     "  mappings={\n",
     "    \"properties\": {\n",
     "      \"plot_embedding\": { \n",
     "        \"type\": \"dense_vector\", \n",
-    "        \"dims\": 1536,\n",
+    "        \"dims\": 1536, \n",
     "        \"similarity\": \"dot_product\" \n",
     "      },\n",
-    "      \"plot\": { \n",
-    "        \"type\": \"text\" \n",
+    "      \"plot\": {\n",
+    "        \"type\": \"text\"\n",
+    "        }\n",
     "      }\n",
     "    }\n",
-    "  }\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e9d4bfd2",
+   "id": "07c187a9",
    "metadata": {},
    "source": [
     "## Insert Documents\n",
@@ -291,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa8eda5",
+   "id": "d68737cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a68e808e",
+   "id": "cf0f6df7",
    "metadata": {},
    "source": [
     "## Semantic search\n",
@@ -328,10 +331,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a47cdc60",
+   "execution_count": 23,
+   "id": "d9b21b71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.91674197\n",
+      "Title: Fight Club\n",
+      "Plot: An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.\n",
+      "\n",
+      "Score: 0.9069592\n",
+      "Title: Pulp Fiction\n",
+      "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
+      "\n",
+      "Score: 0.8992071\n",
+      "Title: The Dark Knight\n",
+      "Plot: When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.search(\n",
     "    index='openai-movie-embeddings', \n",
@@ -340,7 +362,7 @@
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
-    "                \"model_id\": \"openai_embeddings\",\n",
+    "                \"model_id\": \"my_openai_embedding_model\",\n",
     "                \"model_text\": \"Fighting movie\"\n",
     "            }\n",
     "        },\n",
