Updated package information for Multi Query Retrievals

--- a/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,14 +38,13 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU lark elasticsearch langchain openai tiktoken\n",
+    "!python3 -m pip install -qU lark elasticsearch langchain_openai tiktoken\n",
     "\n",
     "from langchain.schema import Document\n",
-    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
     "from langchain.vectorstores import ElasticsearchStore\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai.chat_models import ChatOpenAI\n",
     "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
-    "from langchain.chains import LLMChain\n",
     "from getpass import getpass"
    ]
   },
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,10 +214,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
