Fix import issues in Multi-Query Chatbot

--- a/notebooks/langchain/multi-query-retriever-examples/chatbot-with-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/chatbot-with-multi-query-retriever.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU lark elasticsearch langchain openai\n",
+    "!python3 -m pip install -qU jq lark elasticsearch langchain_openai tiktoken\n",
     "\n",
-    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
     "from langchain.vectorstores import ElasticsearchStore\n",
-    "from langchain.llms import OpenAI\n",
+    "from langchain_openai.llms import OpenAI\n",
     "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
     "from getpass import getpass"
    ]
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "vectorstore = ElasticsearchStore(\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
     "    es_api_key=ELASTIC_API_KEY,\n",
-    "    index_name=\"elasticsearch-multi-query-demo\",\n",
+    "    index_name=\"chatbot-multi-query-demo\",\n",
     "    embedding= embeddings,\n",
     ")"
    ]
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "documents = vectorstore.from_documents(\n",
     "    docs, \n",
     "    embeddings,  \n",
-    "    index_name=\"elasticsearch-multi-query-demo\",\n",
+    "    index_name=\"chatbot-multi-query-demo\",\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY\n",
     ")\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
