Fix link of the notebook.

--- a/notebooks/learning-to-rank/01-learning-to-rank.ipynb
+++ b/notebooks/learning-to-rank/01-learning-to-rank.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# How to train and deploy Learning To Rank\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/afoucret/elasticsearch-labs/blob/ltr-notebook/notebooks/learning-to-rank/01-learning-to-rank.ipynb.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/afoucret/elasticsearch-labs/blob/ltr-notebook/notebooks/learning-to-rank/01-learning-to-rank.ipynb)\n",
     "\n",
     "In this notebook we will see example on how to train a Learning To Rank model using [XGBoost](https://xgboost.ai/) and how to deploy it to be used as a rescorer in Elasticsearch."
    ]
